--- a/Server/package.json
+++ b/Server/package.json
@@ -10,11 +10,8 @@
     "express-sessions": "^1.0.6",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": "18.x"
-  },  
-  "name": "node-with-mongodb",
+  }, 
+  "name": "server",
   "version": "1.0.0",
   "type": "module",
   "main": "app.js",
